fix for logo / adv search overlap; home page covid

--- a/css/hvd_topbar_white.css
+++ b/css/hvd_topbar_white.css
@@ -24,7 +24,7 @@
    background: transparent;
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1450px) {
     #hlLogoHeader {
         display: none;
     }
